--- a/src-frontend/index.html
+++ b/src-frontend/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>hello</title>
+    <title>goocean</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
   <body>
     <!--vue-ssr-outlet-->
